after meet with dr dan